# ffterm

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.md  setup.py
.github/workflows/: pypi.yml
ffterm/: __init__.py  ffterm.cpp  image.py  lib.py  main.py  utils.py  video.py
src/: CMakeLists.txt  Makefile  ansi.cpp  ansi.hpp  argparse.cpp  argparse.hpp  config.hpp.in  getch.cpp  getch.hpp  main.cpp  main.py  printimg.cpp  printimg.hpp  tvideo.cpp  utils.cpp  utils.hpp
